# prompt-bar

./: Cargo.toml  README.md
client/src/: App.tsx
lib/: plugins.rs  window.rs
